<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.splash.SplashActivity">


    <ImageView
        android:id="@+id/splash_iv_beaver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/beaver"
        app:layout_constraintBottom_toBottomOf="@+id/splash_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/splash_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splash_iv_beaver"
        android:layout_marginBottom="50dp">

        <TextView
            android:id="@+id/splash_tv_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20dp"
            android:text="@string/app_name"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/raleway_extra_bold_italic"/>

        <TextView
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:id="@+id/splash_tv_from"
            android:text="@string/from"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_regular"/>

        <TextView
            android:gravity="center"
            android:id="@+id/splash_tv_author"
            android:text="@string/author"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_semi_bold"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>